--- a/view/adminhtml/web/css/common.css
+++ b/view/adminhtml/web/css/common.css
@@ -80,12 +80,18 @@
 	background-color : #F5FAFD;
 	border : 1px solid #E2F0FA;
 	height : 70px;
+	position : relative;
 }
 
 .algolia-admin-content-links {
 	width : 49%;
-	display: inline-block;
-	margin-top: 25px;
+	height: 70px;
+	display: table;
+}
+
+.algolia-admin-content-links p {
+	vertical-align: middle;
+	display: table-cell;
 }
 
 .algolia-admin-content-links span{
@@ -101,6 +107,9 @@
 	width : 49%;
 	display: inline-block;
 	text-align : right;
+	position : absolute;
+	top : 10px;
+	right : 0;
 }
 
 .algolia-admin-content-videos img{
