--- a/view/adminhtml/web/css/merchandising.css
+++ b/view/adminhtml/web/css/merchandising.css
@@ -1,7 +1,38 @@
 .algoliasearch-merchandising-options {
     display: flex;
+    justify-content: space-between;
+}
+.algoliasearch-merchandising-options .merchandising-item {
+    width: 33%;
+    max-width: 360px;
+}
+.merchandising-item .image-container {
+    display: flex;
+    align-items: flex-end;
+    min-height: 175px;
+}
+.merchandising-item img {
+    display: block;
+    margin: 0 auto;
 }
 
-.algoliasearch-merchandising-options .column {
-    width: 33%;
+.merchandising-item h3 {
+    margin-top: 1.5em;
+}
+.merchandising-item .std p {
+    line-height: 1.5;
+    font-size: 1em;
+    margin-bottom: 1.5em;
+}
+.merchandising-item a {
+    font-weight: 600;
+    letter-spacing: .2px;
+}
+
+@media only screen and (min-width: 1400px) {
+
+    .algoliasearch-merchandising-options {
+        max-width: 1400px;
+    }
+
 }
