add querymerchandiser svg

--- a/view/adminhtml/templates/merchandising/page.phtml
+++ b/view/adminhtml/templates/merchandising/page.phtml
@@ -4,7 +4,7 @@
 <section class="algoliasearch-merchandising-options clearfix">
     <div class="merchandising-item query-merchandising">
         <div class="image-container">
-            <img src="<?php echo $this->getViewFileUrl('Algolia_AlgoliaSearch::images/illu-lpb.svg'); ?>" alt="<?php echo  __('Query Merchandiser') ?>" title="<?php echo  __('Query Merchandiser') ?>" />
+            <img src="<?php echo $this->getViewFileUrl('Algolia_AlgoliaSearch::images/illu-querymerchandiser.svg'); ?>" alt="<?php echo  __('Query Merchandiser') ?>" title="<?php echo  __('Query Merchandiser') ?>" />
         </div>
         <h3><?php echo __('Query Merchandiser') ?></h3>
         <div class="std description">
