Apply suggestions from code review

--- a/view/adminhtml/templates/analytics/overview.phtml
+++ b/view/adminhtml/templates/analytics/overview.phtml
@@ -161,8 +161,7 @@ $view = $this->getViewModel();
                 <?php if (count($view->getNoResultSearches())): ?>
                     <table class="data-table admin__table-primary">
                         <thead>
-                            <tr class="
-">
+                            <tr class="headings">
                                 <th><?php echo __('Query') ?></th>
                                 <th class="a-right"><?php echo __('Count') ?></th>
                             </tr>
