--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -22,12 +22,12 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
     <ul role="tablist">
         <li class="tab-active" role="tab" aria-controls="algolia-documentation-panel" aria-selected="true">
             <a href="javascript:;">
-                <span>Search Documentation</span>
+                <span><?php echo __('Search Documentation') ?></span>
             </a>
         </li>
         <li role="tab" aria-controls="algolia-contact-panel" aria-selected="false">
             <a href="javascript:;">
-                <span>Contact Us</span>
+                <span><?php echo __('Contact Us') ?></span>
             </a>
         </li>
     </ul>
