--- a/view/adminhtml/templates/common.phtml
+++ b/view/adminhtml/templates/common.phtml
@@ -88,16 +88,19 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				</div>
 			`;
 
-            /** FEATURE ACTIVATION **/
-            var notActivatedText = `
-                <tr><td colspan="3">
-				<div class="algolia_block blue icon-stars">
-                    Enhance your Analytics with <b>Algolia Click Analytics</b> that provide you even more insights
-                    like Click-through Rate, Conversion Rate from searches and average click position.
-                    Click Analytics are only available for higher plans and require only minor additional settings.
-                    <br><br>
-                    Find more information in <a href="https://www.algolia.com/doc/integration/magento-2/how-it-works/click-and-conversion-analytics/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">documentation</a>.
-                </td></tr></div>
+			/** FEATURE ACTIVATION **/
+			var notActivatedText = `
+			<tr>
+				<td colspan="3">
+					<div class="algolia_block blue icon-stars">
+					Enhance your Analytics with <b>Algolia Click Analytics</b> that provide you even more insights
+					like Click-through Rate, Conversion Rate from searches and average click position.
+					Click Analytics are only available for higher plans and require only minor additional settings.
+					<br><br>
+					Find more information in <a href="https://www.algolia.com/doc/integration/magento-2/how-it-works/click-and-conversion-analytics/?utm_source=magento&utm_medium=extension&utm_campaign=magento_2&utm_term=shop-owner&utm_content=doc-link" target="_blank">documentation</a>.
+					</div>
+				</td>
+			</tr>
 			`;
 
 			// Click analytics
@@ -107,8 +110,8 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			}
 
 			if (isClickAnalyticsEnabled === true && isClickAnalyticsTurnedOnInAdmin === false) {
-			    $('#row_algoliasearch_cc_analytics_cc_analytics_group_enable').before(notActivatedText);
-            }
+				$('#row_algoliasearch_cc_analytics_cc_analytics_group_enable').before(notActivatedText);
+			}
 
 			// Query rules in facets
 			if (isQueryRulesEnabled === false) {
