--- a/view/adminhtml/templates/query/edit/merchandising.phtml
+++ b/view/adminhtml/templates/query/edit/merchandising.phtml
@@ -186,12 +186,12 @@ $isConfig = [
 </script>
 
 <script>
-    requirejs(['algoliaAdminBundle', 'algoliaEventTracking'], function (algoliaAdminBundle, algoliaEvents) {
+    requirejs(['algoliaAdminBundle'], function (algoliaAdminBundle) {
         algoliaAdminBundle.$(function ($) {
         	var config = <?php echo json_encode($isConfig); ?>;
             config.searchFunction = function(helper) {
                 if (helper.state.query !== '') {
-                    algoliaEvents.postEvent('Searched Keyword', {
+                    algoliaEventsTracking.postEvent('Searched Keyword', {
                         source: 'magento2.querymerch.edit',
                         search: helper.state.query
                     });
