Bugfix after verification. Remove escapeJS for json_decode.

--- a/view/adminhtml/templates/common.phtml
+++ b/view/adminhtml/templates/common.phtml
@@ -10,9 +10,9 @@ $ajaxCheckQuery = $block->getUrl('algolia_algoliasearch/query/checkQuery');
 $applicationId = $viewModel->getApplicationId();
 ?>
 <script>
-var applicationId = <?php echo $block->escapeJs(json_encode($applicationId)); ?>;
-var ajaxCheckUrl = <?php echo $block->escapeJs(json_encode($ajaxCheckUrl)); ?>;
-var ajaxCheckQuery = <?php echo $block->escapeJs(json_encode($ajaxCheckQuery)); ?>;
+var applicationId = <?php echo json_encode($applicationId); ?>;
+var ajaxCheckUrl = <?php echo json_encode($ajaxCheckUrl); ?>;
+var ajaxCheckQuery = <?php echo json_encode($ajaxCheckQuery); ?>;
 document.addEventListener("DOMContentLoaded", function(event) {
   requirejs([
     'jquery',
