--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -87,7 +87,7 @@ $videoFeatures = $block->getViewFileUrl('Algolia_AlgoliaSearch::images/video-fea
         <div id="landing" class="row">
             <div class="col-l-4">
                 <div class="heading">
-                    <img src="<?php echo $block->escapeUrl($docIllustration) ?>"  alt="<?php echo $block->escapeHtmlAttr(__('Documentation')) ?>"> />
+                    <img src="<?php echo $block->escapeUrl($docIllustration) ?>"  alt="<?php echo $block->escapeHtmlAttr(__('Documentation')) ?>" />
 
                     <div class="main">
                         <?php echo $block->escapeHtml(__('Documentation')) ?>
