--- a/view/adminhtml/templates/configuration.phtml
+++ b/view/adminhtml/templates/configuration.phtml
@@ -20,10 +20,10 @@ $extensionNotices = $viewModel->getExtensionNotices();
 ?>
 
 <script>
-var isClickAnalyticsEnabled = <?php echo $block->escapeJs(json_encode($isClickAnalyticsEnabled)); ?>;
-var linksAndVideoTemplate = <?php echo $block->escapeJs(json_encode($linksAndVideoTemplate)); ?>;
-var isEsWarningNeeded = <?php echo $block->escapeJs(json_encode($isEsWarningNeeded)); ?>;
-var extensionNotices = <?php echo $block->escapeJs(json_encode($extensionNotices)); ?>;
+var isClickAnalyticsEnabled = <?php echo json_encode($isClickAnalyticsEnabled); ?>;
+var linksAndVideoTemplate = <?php echo json_encode($linksAndVideoTemplate); ?>;
+var isEsWarningNeeded = <?php echo json_encode($isEsWarningNeeded); ?>;
+var extensionNotices = <?php echo json_encode($extensionNotices); ?>;
 
 document.addEventListener("DOMContentLoaded", function(event) {
 	requirejs(['algoliaAdminBundle'], function(algoliaAdminBundle) {
