--- a/view/adminhtml/templates/queue/status.phtml
+++ b/view/adminhtml/templates/queue/status.phtml
@@ -29,8 +29,8 @@
 <?php if ($block->isQueueActive()) : ?>
     <div class="message message-notice notice algolia-notice">
         <div data-ui-id="messages-message-notice">
-            <?php echo $block->escapeHtml(__('Status of the queue : <strong>%1</strong>.', $block->getQueueRunnerStatus())); ?>
-            <p><?php echo $block->escapeHtml(__('Last Update : <strong>%1</strong>.', $block->getLastQueueUpdate())); ?></p>
+            <?php echo __('Status of the queue : <strong>%1</strong>.', $block->getQueueRunnerStatus()); ?>
+            <p><?php echo __('Last Update : <strong>%1</strong>.', $block->getLastQueueUpdate()); ?></p>
             <?php $notices = $block->getNotices() ?>
             <?php foreach ($notices as $notice) : ?>
                 <p><?php echo $notice ?></p>
