--- a/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
+++ b/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
@@ -203,7 +203,7 @@ $isConfig = [
 <script>
     requirejs(['algoliaAdminBundle'], function (algoliaAdminBundle) {
         algoliaAdminBundle.$(function ($) {
-        	var config = <?php echo $block->escapeJs(json_encode($isConfig)); ?>;
+        	var config = <?php echo json_encode($isConfig); ?>;
 
             var search = algoliaAdminBundle.instantsearch(config);
 
