--- a/view/frontend/templates/instant/hit.phtml
+++ b/view/frontend/templates/instant/hit.phtml
@@ -14,10 +14,14 @@ $tierFormatedVar = $block->escapeHtml('price' . $priceKey . '_tier_formated');
 ?>
 
 <script type="text/template" id="instant-hit-template">
-    <div class="col-md-4 col-sm-6">
-        <div class="result-wrapper" itemprop="itemListElement" itemscope itemtype="http://schema.org/Product">
-            <a itemprop="url"
-                class="result"
+    <div class="col-md-4 col-sm-6" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+        <meta itemprop="position" content="{{__position}}" />
+        <div class="result-wrapper" itemprop="item" itemscope itemtype="http://schema.org/Product">
+            <meta itemprop="url"
+                {{^__queryID}} content="{{url}}" {{/__queryID}}
+                {{#__queryID}} content="{{urlForInsights}}" {{/__queryID}}
+                />
+            <a class="result"
                 {{^__queryID}} href="{{url}}" {{/__queryID}}
                 {{#__queryID}} href="{{urlForInsights}}" {{/__queryID}}
                 data-objectid="{{objectID}}"
