--- a/view/adminhtml/layout/algolia_algoliasearch_queue_log.xml
+++ b/view/adminhtml/layout/algolia_algoliasearch_queue_log.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Backend\Block\Template" name="analytics.overview.form" template="Algolia_AlgoliaSearch::queue/log/helper.phtml" />
+            <block class="Magento\Backend\Block\Template" name="algolia.indexing.log.helper" template="Algolia_AlgoliaSearch::queue/log/helper.phtml" />
             <uiComponent name="algolia_algoliasearch_indexing_log_listing"/>
         </referenceContainer>
     </body>
