--- a/view/frontend/templates/autocomplete.phtml
+++ b/view/frontend/templates/autocomplete.phtml
@@ -29,7 +29,12 @@ if ($config->isDefaultSelector()) : ?>
                        placeholder="<?php echo $block->escapeHtml($placeholder); ?>" />
 
                 <span class="clear-cross clear-query-autocomplete"></span>
-                <span id="algolia-glass" class="magnifying-glass" width="24" height="24"></span>
+                <button id="algolia-glass"
+                        class="magnifying-glass"
+                        type="submit"
+                        title="<?= $block->escapeHtmlAttr(__('Search')) ?>"
+                        width="24"
+                        height="24"></button>
             </div>
         </form>
     </div>
