--- a/view/frontend/layout/algolia_search_handle.xml
+++ b/view/frontend/layout/algolia_search_handle.xml
@@ -10,6 +10,7 @@
         <css src="Algolia_AlgoliaSearch::internals/autocomplete.css" />
         <css src="Algolia_AlgoliaSearch::internals/grid.css" />
         <css src="Algolia_AlgoliaSearch::internals/algolia-reset.css" />
+        <css src="Algolia_AlgoliaSearch::internals/algoliasearch.css" />
         <css src="Algolia_AlgoliaSearch::internals/instantsearch.v3.css" />
     </head>
     <body>
