--- a/view/adminhtml/templates/analytics/graph.phtml
+++ b/view/adminhtml/templates/analytics/graph.phtml
@@ -1,5 +1,6 @@
 <?php
-/** @var \Magento\Backend\Block\Template $block */
+
+/* @var \Magento\Backend\Block\Template $block */
 ?>
 <?php if (!empty($block->getAnalytics())): ?>
     <div id="algolia-analyatics-diagram"></div>
