Fix 'formated' typo

--- a/view/adminhtml/templates/landingpage/search-configuration.phtml
+++ b/view/adminhtml/templates/landingpage/search-configuration.phtml
@@ -119,7 +119,7 @@ $isConfig = [
                 {{/_highlightResult.sku.0}}
             </td>
             <td>{{{ _highlightResult.name.value }}}</td>
-            <td>{{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formated }}</td>
+            <td>{{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formatted }}</td>
             <td class="actions">
                 <div class="pin_block">
                     <a class="arrow up" href="#">
@@ -184,7 +184,7 @@ $isConfig = [
                 {{/_highlightResult.sku.0}}
             </td>
             <td>{{{ _highlightResult.name.value }}}</td>
-            <td>{{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formated }}</td>
+            <td>{{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formatted }}</td>
                 <td class="actions">
                     <div class="pin_block">
                         <a class="arrow up" href="#">
@@ -225,7 +225,7 @@ $isConfig = [
             {{/sku.0}}
         </td>
         <td>{{{ name }}}</td>
-        <td>{{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formated }}</td>
+        <td>{{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formatted }}</td>
             <td class="actions">
                 <div class="pin_block">
                     <a class="arrow up" href="#">
@@ -252,7 +252,7 @@ $isConfig = [
         <div class="info">
             {{{ _highlightResult.name.value }}}
             <div class="price">
-                {{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formated }}
+                {{ price.<?php echo $configHelper->getCurrencyCode() ?>.default_formatted }}
             </div>
         </div>
 
