--- a/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
+++ b/view/adminhtml/templates/catalog/category/edit/merchandising.phtml
@@ -108,7 +108,7 @@ $isConfig = [
             <td>{{ objectID }}</td>
             <td>{{{ _highlightResult.sku.value }}}</td>
             <td>{{{ _highlightResult.name.value }}}</td>
-            <td>{{ price.USD.default_formated }}</td>
+            <td>{{ price.USD.default_formatted }}</td>
             <td class="actions">
                 <div class="pin_block">
                     <a class="arrow up" href="#">
@@ -151,7 +151,7 @@ $isConfig = [
         <td>{{ objectID }}</td>
         <td>{{{ sku }}}</td>
         <td>{{{ name }}}</td>
-        <td>{{ price.USD.default_formated }}</td>
+        <td>{{ price.USD.default_formatted }}</td>
         <td class="actions">
             <div class="pin_block">
                 <a class="arrow up" href="#">
@@ -178,7 +178,7 @@ $isConfig = [
         <div class="info">
             {{{ _highlightResult.name.value }}}
             <div class="price">
-                {{ price.USD.default_formated }}
+                {{ price.USD.default_formatted }}
             </div>
         </div>
 
