--- a/view/adminhtml/templates/query/edit/merchandising.phtml
+++ b/view/adminhtml/templates/query/edit/merchandising.phtml
@@ -87,7 +87,7 @@ $isConfig = [
                             {{/_highlightResult.sku.0}}
                         </td>
                         <td>{{{ _highlightResult.name.value }}}</td>
-                        <td>{{ price.<?php echo $currencyCode ?>.default_formated }}</td>
+                        <td>{{ price.<?php echo $currencyCode ?>.default_formatted }}</td>
                         <td class="actions">
                             <div class="pin_block">
                                 <a class="arrow up" href="#">
@@ -137,7 +137,7 @@ $isConfig = [
             {{/sku.0}}
         </td>
         <td>{{{ name }}}</td>
-        <td>{{ price.<?php echo $currencyCode ?>.default_formated }}</td>
+        <td>{{ price.<?php echo $currencyCode ?>.default_formatted }}</td>
         <td class="actions">
             <div class="pin_block">
                 <a class="arrow up" href="#">
@@ -164,7 +164,7 @@ $isConfig = [
         <div class="info">
             {{{ _highlightResult.name.value }}}
             <div class="price">
-				{{ price.<?php echo $currencyCode ?>.default_formated }}
+				{{ price.<?php echo $currencyCode ?>.default_formatted }}
 			</div>
         </div>
 
