--- a/view/frontend/templates/recommend/cart/recommend_items.phtml
+++ b/view/frontend/templates/recommend/cart/recommend_items.phtml
@@ -5,10 +5,12 @@ $recommendConfig = $viewModel->getAlgoliaRecommendConfiguration();
 if (!empty($recommendConfig['enabledRelatedInCart']) || !empty($recommendConfig['enabledFBTInCart']) || !empty($recommendConfig['isTrendItemsEnabledInCartPage'])):
     $cartItems = $viewModel->getAllCartItems();
     ?>
-    <div id="frequentlyBoughtTogether" class="recommend-component"></div>
-    <div id="relatedProducts" class="recommend-component"></div>
-    <div id="trendItems" class="trendsItem recommend-component"></div>
-    <div id="lookingSimilar" class="lookingSimilar recommend-component"></div>
+    <div id="algoliaRecommend">
+        <div id="frequentlyBoughtTogether" class="recommend-component"></div>
+        <div id="relatedProducts" class="recommend-component"></div>
+        <div id="trendItems" class="trendsItem recommend-component"></div>
+        <div id="lookingSimilar" class="lookingSimilar recommend-component"></div>
+    </div>
     <script type="text/x-magento-init">
         {
             "*": {
