--- a/view/frontend/templates/recommend/products.phtml
+++ b/view/frontend/templates/recommend/products.phtml
@@ -5,9 +5,11 @@ $recommendConfig =  $viewModel->getAlgoliaRecommendConfiguration();
 
 if (!empty($recommendConfig['enabledFBT']) || !empty($recommendConfig['enabledRelated']) || !empty($recommendConfig['isTrendItemsEnabledInPDP'])):
     $product = $viewModel->getProduct(); ?>
-    <div id="frequentlyBoughtTogether" class="recommend-component"></div>
-    <div id="relatedProducts" class="recommend-component"></div>
-    <div id="trendItems" class="trendsItem recommend-component"></div>
+    <div id="algoliaRecommend">
+        <div id="frequentlyBoughtTogether" class="recommend-component"></div>
+        <div id="relatedProducts" class="recommend-component"></div>
+        <div id="trendItems" class="trendsItem recommend-component"></div>
+    </div>
     <script type="text/x-magento-init">
         {
             "*": {
