--- a/view/frontend/templates/layer/view.phtml
+++ b/view/frontend/templates/layer/view.phtml
@@ -1,7 +1,3 @@
-<?php
-/** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
-?>
-
 <?php if ($block->canShowBlock()) : ?>
     <div class="block filter algolia-filter-list" id="layered-filter-block" data-mage-init='{"collapsible":{"openedState": "active", "collapsible": true, "active": false, "collateral": { "openedState": "filter-active", "element": "body" } }}'>
         <?php $filtered = count($block->getLayer()->getState()->getFilters()) ?>
@@ -34,15 +30,25 @@
             <?php if ($wrapOptions) : ?>
                 </div>
             <?php else : ?>
-                <?php $scriptString = <<<script
-                require([
-                    'jquery'
-                ], function ($) {
-                    $('#layered-filter-block').addClass('filter-no-options');
-                });
-    script;
-                ?>
-                <?= /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false); ?>
+                <?php if (class_exists('\Magento\Framework\View\Helper\SecureHtmlRenderer')) : ?>
+                    <?php
+                    /** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
+                    $scriptString = "require([
+                            'jquery'
+                        ], function ($) {
+                            $('#layered-filter-block').addClass('filter-no-options');
+                        });";
+
+                    /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false); ?>
+                <?php else : ?>
+                    <script>
+                        require([
+                            'jquery'
+                        ], function ($) {
+                            $('#layered-filter-block').addClass('filter-no-options');
+                        });
+                    </script>
+                <?php endif; ?>
             <?php endif; ?>
         </div>
     </div>
